Bug 515690 - KMyMoney crashes
Summary: KMyMoney crashes
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.1
Platform: Other Other
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-07 18:23 UTC by Mauro Rog
Modified: 2026-02-08 08:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments
The point where KMMoney crashes (12.76 KB, image/png)
2026-02-07 18:23 UTC, Mauro Rog
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mauro Rog 2026-02-07 18:23:11 UTC
Created attachment 189335 [details]
The point where KMMoney crashes

SUMMARY 
KMyMoney crashes when using the "Apply difference" function in the Split Editor.

STEPS TO REPRODUCE

Create a new transaction and enter a total amount.
Open the Split Editor.
Enter an amount for the first split.
Add a second split and set its amount to 0.
Click on "Apply the difference".

OBSERVED RESULT 
The application crashes and closes immediately.

EXPECTED RESULT 
The software should calculate the difference between the total amount and the existing splits, then populate the field automatically without crashing.

SOFTWARE/OS VERSIONS Windows: Windows 10
Comment 1 Paul Worrall 2026-02-07 22:53:43 UTC
Reproducible on a recent build from git master

KMyMoney: 5.2.70-f0308fde6
Akonadi: Unknown (build against 6.6.41)
Alkimia: 8.2.70 (build against 8.2.70)
Aqbanking: Unknown (build against 6.9.1)
Gpgme: Unknown (build against 2.0.0)
Gwenhywfar: Unknown (build against 5.14.1)
KDiagram: Unknown (build against )
libical: Unknown (build against 3.0.20)
libofx: Unknown (build against 0.10.9)
SQLCipher: Unknown (build against 3.46.1)
KDE Frameworks: 6.23.0
Qt: Using 6.10.2 and built against 6.10.2
Arch Linux (Wayland)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.18.7-arch1-1
Comment 2 Thomas Baumgart 2026-02-08 08:06:49 UTC
Git commit fc644dbe752b915d7d61d798574eb0bac9836035 by Thomas Baumgart.
Committed on 08/02/2026 at 08:01.
Pushed by tbaumgart into branch 'master'.

Prevent crash when applying unassigned difference to split
FIXED-IN: 5.2.2

M  +32   -5    kmymoney/views/splitdialog.cpp

https://invent.kde.org/office/kmymoney/-/commit/fc644dbe752b915d7d61d798574eb0bac9836035
Comment 3 Thomas Baumgart 2026-02-08 08:07:53 UTC
Git commit 98bdf80eeeb936942f78881b9a44c4ed15ae290a by Thomas Baumgart.
Committed on 08/02/2026 at 08:04.
Pushed by tbaumgart into branch '5.2'.

Prevent crash when applying unassigned difference to split
FIXED-IN: 5.2.2
(cherry picked from commit fc644dbe752b915d7d61d798574eb0bac9836035)

M  +32   -5    kmymoney/views/splitdialog.cpp

https://invent.kde.org/office/kmymoney/-/commit/98bdf80eeeb936942f78881b9a44c4ed15ae290a