Prevent crash when applying unassigned difference to split

BUG: 515690
FIXED-IN: 5.2.2
(cherry picked from commit fc644dbe752b915d7d61d798574eb0bac9836035)